[package]
name = "reading_xml"
version = "0.1.0"
authors = ["danielhamngren <daniel.hamngren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roxmltree = "0.13.0"
reqwest = { version = "0.10", features = ["blocking"]}
futures = "0.3"
image = "0.23.9"
bytes = "0.5"
piston_window = "0.113.0"
gfx_device_gl = "0.16.2"