[package]
name = "tile-map-navigator"
version = "0.1.0"
authors = ["danielhamngren <daniel.hamngren@gmail.com>"]
license = "AGPL-3.0-only"
keywords = ["WMTS", "GIS"]
categories = ["visualization"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roxmltree = "0.13.0"
reqwest = { version = "0.10", features = ["blocking"]}
futures = "0.3"
image = "0.23.9"
bytes = "0.5"
piston_window = "0.113.0"
gfx_device_gl = "0.16.2"
structopt = "0.3"